--- a/views/acdlogin.ejs
+++ b/views/acdlogin.ejs
@@ -40,6 +40,10 @@
     text-decoration: none;
   }
 
+  input[type="email"], input[type="number"], input[type="search"], input[type="text"], input[type="tel"], input[type="url"], input[type="password"], textarea, select {
+	background-color: var(--color-gray-17) !important;
+}
+
 
   </style>
 </head>
