--- a/views/acdtest.ejs
+++ b/views/acdtest.ejs
@@ -49,7 +49,7 @@
 
 			<script>
 				var now = new Date.now();;
-				var timeleft = '<%=t%>' + 10800000 - now;
+				var timeleft = '<%=starttime%>' + 10800000 - now;
 				var days = Math.floor(timeleft / (1000 * 60 * 60 * 24));
 				var hours = Math.floor((timeleft % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
 				var minutes = Math.floor((timeleft % (1000 * 60 * 60)) / (1000 * 60));
