--- a/views/acdtest.ejs
+++ b/views/acdtest.ejs
@@ -32,7 +32,7 @@
 	<!-- <div id="preloader" style="width: 100vw; height: 100vh; z-index: 10000; background: black;">
 		<img src="./images/preloader1.gif" id="loader" style="width: 100vw; background:black;">
 	</div> -->
-	<header style="height: 1vh !important; position: fixed;" class="hidden">
+	<header style="height: 1vh !important;" class="hidden">
 		<div id="navigation" class="">
 			<a class="menu-toggle d-none d-lg-block" style="color: white;">
 				<i class="icofont-ui-user"></i> &nbsp;BULUSU SRI DATTA SUDHEER
