--- a/views/acdtest.ejs
+++ b/views/acdtest.ejs
@@ -77,7 +77,7 @@
 				}
 			</script>
 
-			<div>
+			<div style="color: white; margin-top: 120px;">
 				TIMER: 
 				<p id="hours"></p>
 				<p id="mins"></p>
