--- a/views/acdtest.ejs
+++ b/views/acdtest.ejs
@@ -48,7 +48,9 @@
 			</div>
 
 			<script>
-				var now = new Date.now();;
+				var starttime = parseInt('<%=starttime%>');
+
+				var now = new Date.now();
 				var timeleft = starttime + 10800000 - now;
 				var days = Math.floor(timeleft / (1000 * 60 * 60 * 24));
 				var hours = Math.floor((timeleft % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
