--- a/views/acdtest.ejs
+++ b/views/acdtest.ejs
@@ -54,6 +54,11 @@
 				var hours = Math.floor((timeleft % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
 				var minutes = Math.floor((timeleft % (1000 * 60 * 60)) / (1000 * 60));
 				var seconds = Math.floor((timeleft % (1000 * 60)) / 1000);
+				console.log(timeleft);
+				console.log(days);
+				console.log(hours);
+				console.log(minutes);
+				console.log(seconds);
 				document.getElementById("hours").innerHTML = hours + "h " 
 				document.getElementById("mins").innerHTML = minutes + "m " 
 				document.getElementById("secs").innerHTML = seconds + "s"
