--- a/views/acdtest.ejs
+++ b/views/acdtest.ejs
@@ -48,7 +48,8 @@
 			</div>
 
 			<script>
-				var now = new Date().now();
+				var now = new window.Date();
+
 				var timeleft = parseInt('<%=starttime%>') + 10800000 - now;
 				var days = Math.floor(timeleft / (1000 * 60 * 60 * 24));
 				var hours = Math.floor((timeleft % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
