--- a/views/acdtest.ejs
+++ b/views/acdtest.ejs
@@ -49,11 +49,11 @@
 
 			
 
-			<div class="row" style="color: white; margin-top: 120px; display: block; margin:auto;">
-				TIMER: 
-				<span id="hours"></span>
-				<span id="mins"></span>
-				<span id="secs"></span>
+			<div align="center" style="color: white; margin-top: 120px; font-size: large;">
+				TIME LEFT: 
+				<span id="hours"></span>&nbsp;
+				<span id="mins"></span>&nbsp;
+				<span id="secs"></span>&nbsp;
 			</div>
 
 			<script>
