--- a/views/acdtest.ejs
+++ b/views/acdtest.ejs
@@ -57,19 +57,15 @@
 			</div>
 
 			<script>
+				var timeleft
 				var myfunc = setInterval(function() {
 					var now = new window.Date();
 					// 10800000
-					var timeleft = parseInt('<%=starttime%>') +  3300000 - now;
+					timeleft = parseInt('<%=starttime%>') +  3400000 - now;
 					var days = Math.floor(timeleft / (1000 * 60 * 60 * 24));
 					var hours = Math.floor((timeleft % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
 					var minutes = Math.floor((timeleft % (1000 * 60 * 60)) / (1000 * 60));
 					var seconds = Math.floor((timeleft % (1000 * 60)) / 1000);
-					console.log(timeleft);
-					console.log(days);
-					console.log(hours);
-					console.log(minutes);
-					console.log(seconds);
 					document.getElementById("hours").innerHTML = hours + "h " 
 					document.getElementById("mins").innerHTML = minutes + "m " 
 					document.getElementById("secs").innerHTML = seconds + "s"
