--- a/views/acdtest.ejs
+++ b/views/acdtest.ejs
@@ -58,9 +58,9 @@
 
 			<script>
 				var  hours, minutes, seconds;
-				var now = new window.Date();
 				var myfunc = setInterval(function() {
-					var timeleft = parseInt('<%=starttime%>') +  4200000 - now;
+					var now = new window.Date(); 
+					var timeleft = parseInt('<%=starttime%>') +  300000 - now;
 					var days = Math.floor(timeleft / (1000 * 60 * 60 * 24));
 					var hours = Math.floor((timeleft % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
 					minutes = Math.floor((timeleft % (1000 * 60 * 60)) / (1000 * 60));
