--- a/views/acdtest.ejs
+++ b/views/acdtest.ejs
@@ -70,7 +70,7 @@
 					document.getElementById("secs").innerHTML = seconds + "s"
 					if(hours == 0 && seconds == 0 && (minutes == 2 || minutes == 5 || minutes == 10)){
 						new swal({
-						title: '"'+minutes+'" Minutes Left',
+						title: ''+minutes+' Minutes Left',
 						icon: 'warning'
 					})
 				}
