--- a/views/acdrules.ejs
+++ b/views/acdrules.ejs
@@ -165,7 +165,7 @@
 				  e.preventDefault(); 
 				  console.log('start exam');
 				  new swal({
-					  title : 'Time Starts Now !',
+					  title : 'Your time Starts Now !',
 					  text: 'All the Best'
 				  })
 					.then((values)=>{
