--- a/views/acdrules.ejs
+++ b/views/acdrules.ejs
@@ -146,9 +146,9 @@
 			<p> •  Always plot different quantities of a question in different pane.</p>
 			<p> •  Please utilize the time properly. No extra time is provided and no
 				one is allowed to appear for the exam again.</p>
-			<p> •  You need 2 devices (a PC/Desktop and a mobile phone) to atempt this exam.</p>
-			<p> •  Make sure you are answering this in a PC/Desktop.</p>
-			<p> •  Make sure you have QR code reader and Adobe scan in your mobile. </p>
+			<p> •  You need to compile the solution of a question into a pdf and upload it as a whole for each of the questions. </p>
+			<p> • Make sure you check all the submitted answers before ending the test</p>
+
 
 			<form>
 				<div class="form-check">
