--- a/views/acdtest.ejs
+++ b/views/acdtest.ejs
@@ -500,7 +500,7 @@
 
 		<br><br>
 
-		<button class="btn btn-danger" type="button"  id="end">End test</button>
+		<button class="btn btn-danger" type="button" align="center" id="end">End test</button>
 		<script>
 			$("#end").click(function(e){
 				new swal ({
