--- a/views/acdrules.ejs
+++ b/views/acdrules.ejs
@@ -146,7 +146,7 @@
 			<p> •  Always plot different quantities of a question in different pane.</p>
 			<p> •  Please utilize the time properly. No extra time is provided and no
 				one is allowed to appear for the exam again.</p>
-			<p> •  You need to compile the solution of a question into a pdf and upload it as a whole for each of the questions. </p>
+			<p> •  You need to compile the solution of a question into a pdf (only pdf format is allowed) and upload it as a whole for each of the questions. </p>
 			<p> • Make sure you check all the submitted answers before ending the test</p>
 
 
