--- a/views/acdtest.ejs
+++ b/views/acdtest.ejs
@@ -50,6 +50,7 @@
 			
 
 			<div align="center" style="color: white; margin-top: 120px; font-size: large;">
+				<p class="d-block d-lg-none"><i class="icofont-ui-user"></i> &nbsp;BULUSU SRI DATTA SUDHEER</p><br><br>
 				TIME LEFT: 
 				<span id="hours"></span>&nbsp;
 				<span id="mins"></span>&nbsp;
