--- a/views/acdtest.ejs
+++ b/views/acdtest.ejs
@@ -50,7 +50,7 @@
 			
 
 			<div align="center" style="color: white; margin-top: 120px; font-size: large;">
-				<p class="d-block d-lg-none"><i class="icofont-ui-user"></i> &nbsp;BULUSU SRI DATTA SUDHEER</p><br><br>
+				<p class="d-block d-lg-none"><i class="icofont-ui-user"></i> &nbsp;BULUSU SRI DATTA SUDHEER</p>
 				TIME LEFT: 
 				<span id="hours"></span>&nbsp;
 				<span id="mins"></span>&nbsp;
@@ -91,7 +91,7 @@
 		</div>
 	</header>
 
-	<div class="container" id="body" style="color: white; margin-top: 50px; margin-bottom: 25px;">
+	<div class="container" id="body" style="color: white; margin-top: 75px; margin-bottom: 25px;">
 		<div style="padding: 20px; border: 1.5px solid white; border-radius: 15px;">
 			<h4>Question No. 1</h4><br>
 			Design a circuit in LT-spice with the following characteristics:<br>
