--- a/views/competitions.ejs
+++ b/views/competitions.ejs
@@ -755,6 +755,39 @@ Battle hard and be the last one standing!! </p></div>
 
 
 
+    <div class="row ">
+      <div class="col-lg-6 col-sm-12  d-flex justify-content-center ">
+  <div class="navigation-circle" data-aos="zoom-in-down" data-aos-easing="#example-easing"
+        
+     data-aos-duration="1000">
+     <span class="qdot">
+       <button  onclick="location.href = 'https://wissenaire.org/quizzaire';" class="knowmore">KNOW MORE</button>
+     </span>
+    <div class="navigation-circle__inner">
+      <svg class="navigation-circle-svg navigation-circle-svg--opaque" version="1.1" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" viewbox="0 0 320 320" style="enable-background:new 0 0 320 320">
+        <circle cx="160" cy="160" r="158" fill="none" stroke-width="1" stroke="#0d47a1" stroke-linecap="round" stroke-miterlimit="10" style="stroke-dashoffset:0;stroke-dasharray:none;"></circle>
+      </svg>
+      <svg class="navigation-circle-svg navigation-circle-svg--mask" version="1.1" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" viewbox="0 0 320 320" style="enable-background:new 0 0 320 320">
+        <circle id="mask-circle" cx="160" cy="160" r="158" fill="none" stroke-width="4" stroke="#0d47a1" stroke-linecap="round" stroke-miterlimit="10" style="stroke-dasharray:1005.3088px;"></circle>
+      </svg>
+     
+    </div>
+  </div>
+      </div>
+      <div class="col-lg-6 col-sm-12 text-center  text-white event_des_col ">
+       <div data-aos="zoom-in-down" data-aos-easing="#example-easing"
+        
+     data-aos-duration="1500"> <h2>Quizzaire</h2></div>
+       <div data-aos="fade-left"
+     data-aos-easing="#example-easing"
+    
+     data-aos-duration="1500">   <p>Do you consider yourself as a ‘TECHNO’-freak? Are you captivated with the big ‘Corporate’ world of ‘suits and
+      tie’? Are you that guy who delves into the Business section of the paper first every day? Then here comes the
+      absolute chance for you to transform your anticipation into actions!
+      
+        </p></div>
+      </div>
+    </div>
 
 
   	
