--- a/views/quizzaire.ejs
+++ b/views/quizzaire.ejs
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<title>Invstr | Wissenaire’21</title>
+	<title>Quizzaire | Wissenaire’21</title>
 	<meta content="width=device-width, initial-scale=1" name="viewport" />
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
@@ -13,6 +13,7 @@
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" rel="stylesheet"/>
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.2.0/mdb.min.js"></script>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
     <link href="./stylesheets/icofont/icofont.min.css" rel="stylesheet">
 	<link href="./stylesheets/navbar.css" rel="stylesheet">
 	<link rel="shortcut icon" href="./images/logo-mini.png" type="image/x-icon">
@@ -126,7 +127,7 @@
 		<!-- Stack the columns on mobile by making one full-width and the other half-width -->
 		<div class="row" style="padding: 0px; margin:0px;">
 		  	<div class="col-md-2 d-none d-md-block justify-content-center align-self-center">
-			  <a class='ar' href="/schoolchamp" style="display: block; text-align: center;"> School Champ &nbsp;<svg width="33" height="33" viewBox="0 0 33 33" fill="none" xmlns="http://www.w3.org/2000/svg">
+			  <a class='ar' href="/invstr" style="display: block; text-align: center;"> Invstr &nbsp;<svg width="33" height="33" viewBox="0 0 33 33" fill="none" xmlns="http://www.w3.org/2000/svg">
 				<path fill-rule="evenodd" clip-rule="evenodd" d="M23.125 16.1428H12.7431L15.922 12.4056C16.2318 12.0422 16.181 11.5014 15.81 11.1988C15.4381 10.8953 14.8869 10.9451 14.578 11.3085L10.203 16.4514C10.1689 16.4917 10.1514 16.5388 10.126 16.5834C10.105 16.6194 10.0796 16.6502 10.0639 16.6897C10.0245 16.7882 10.0009 16.892 10.0009 16.9965C10.0009 16.9974 10 16.9991 10 17C10 17.0008 10.0009 17.0025 10.0009 17.0034C10.0009 17.108 10.0245 17.2117 10.0639 17.3102C10.0796 17.3497 10.105 17.3805 10.126 17.4165C10.1514 17.4611 10.1689 17.5082 10.203 17.5485L14.578 22.6914C14.7513 22.8946 14.9998 23 15.25 23C15.4478 23 15.6464 22.9349 15.81 22.8011C16.181 22.4986 16.2318 21.9577 15.922 21.5943L12.7431 17.8571H23.125C23.608 17.8571 24 17.4731 24 17C24 16.5268 23.608 16.1428 23.125 16.1428Z" fill="white"/>
 				<path d="M32.25 16.5C32.25 25.1985 25.1985 32.25 16.5 32.25C7.80152 32.25 0.75 25.1985 0.75 16.5C0.75 7.80151 7.80152 0.75 16.5 0.75C25.1985 0.75 32.25 7.80151 32.25 16.5Z" stroke="white" stroke-width="1.5"/>
 				</svg> </a>
@@ -138,24 +139,24 @@
 						<div class="col-12 col-md-6 d-flex justify-content-center align-self-center">
 							<div class="row">
 								<div class="col-12">
-									<h2 align="center" style="font-size: 1.6em; line-height:1.2;">Invstr</h2>
+									<h2 align="center" style="font-size: 1.6em; line-height:1.2;">Quizzaire</h2>
 								</div><br><br>
 								
 							</div>							
 							
 						</div>
 						<div class="col-12 col-md-2 offset-md-2 d-flex justify-content-center align-self-center">
-							<a href=""><img align="center" class="event-img" height="300px" src="./images/invstr.jpg"></a>
+							<a href=""><img align="center" class="event-img" height="300px" src="./images/quizzaire.jpg"></a>
 						</div>
 					</div>
 				
 				</div>
 			</div>
 		  	<div class="col-md-2 d-none d-md-block justify-content-center align-self-center">
-		  		<a class='ar' href="/quizzaire" style="display: block; text-align: center;"> <svg width="33" height="33" viewBox="0 0 33 33" fill="none" xmlns="http://www.w3.org/2000/svg">
+		  		<a class='ar' href="/arduinohackathon" style="display: block; text-align: center;"> <svg width="33" height="33" viewBox="0 0 33 33" fill="none" xmlns="http://www.w3.org/2000/svg">
 				<path fill-rule="evenodd" clip-rule="evenodd" d="M9.875 16.8572L20.2569 16.8572L17.078 20.5944C16.7682 20.9578 16.819 21.4986 17.19 21.8012C17.5619 22.1046 18.1131 22.0549 18.422 21.6915L22.797 16.5486C22.8311 16.5083 22.8486 16.4612 22.874 16.4166C22.895 16.3806 22.9204 16.3498 22.9361 16.3103C22.9755 16.2118 22.9991 16.108 22.9991 16.0035C22.9991 16.0026 23 16.0009 23 16C23 15.9992 22.9991 15.9975 22.9991 15.9966C22.9991 15.892 22.9755 15.7883 22.9361 15.6898C22.9204 15.6503 22.895 15.6195 22.874 15.5835C22.8486 15.5389 22.8311 15.4918 22.797 15.4515L18.422 10.3086C18.2488 10.1054 18.0003 10 17.75 10C17.5523 10 17.3536 10.0651 17.19 10.1989C16.819 10.5014 16.7683 11.0423 17.078 11.4057L20.2569 15.1429L9.875 15.1429C9.392 15.1429 9 15.5269 9 16C9 16.4732 9.392 16.8572 9.875 16.8572Z" fill="white"/>
 				<path d="M0.749998 16.5C0.749998 7.80151 7.80151 0.750002 16.5 0.750002C25.1985 0.750003 32.25 7.80152 32.25 16.5C32.25 25.1985 25.1985 32.25 16.5 32.25C7.80151 32.25 0.749997 25.1985 0.749998 16.5Z" stroke="white" stroke-width="1.5"/>
-				</svg> &nbsp;Quizzaire
+				</svg> &nbsp; Arduino Hackathon
 				</a>
 			</div>
 		</div>
@@ -172,49 +173,49 @@
 	
 
 	<div class="container" id="intro">
-		<p style="color: white; font-size: 18px;text-align: center; font-style: italic;">"Don't look for the needle in the haystack. Just buy the haystack!" — John Bogle<br></p>
+		<p style="color: white; font-size: 18px;text-align: center; font-style: italic;">“Longevity in this business is about being able to reinvent yourself or invent the future”- SATYA NADELLA<br></p>
 		<p style="color: white; font-size: 18px;">
-            It is interesting to see how the stock market graphs change every day. We tend to gamble and invest
-in those shares which have possibility to give high returns. This event introduces participants to a
-brief idea of stocks and tend to test their knowledge on the behaviour of the market.</p>
+            Do you consider yourself as a ‘TECHNO’-freak? Are you captivated with the big ‘Corporate’ world of ‘suits and
+            tie’? Are you that guy who delves into the Business section of the paper first every day? Then here comes the
+            absolute chance for you to transform your anticipation into actions!</p>
 
 		
 		<div class="row" style="margin-top: 10vh;">
 			<div class="col-12 col-md-6" style="height: 0px;" ></div>
 			<div class="col-12 col-md-6" style="margin-bottom: 2.5%;">
 				<div class="row">
-
-					<button class="contact100-form-btn" style="width: 40%; margin: auto;" onclick="popup('invstr-110343');">
+					
+					<button class="contact100-form-btn" style="width: 40%; margin: auto;" onclick="popup('quizzaire-431022');">
 						Register
 						<i class="fa fa-long-arrow-alt-right" id="sl" style="margin-left: 10px;"></i>
 					</button>
 					<noscript id="tsNoJsMsg">Javascript on your browser is not enabled.</noscript>
 					<script src="https://www.townscript.com/popup-widget/townscript-widget.nocache.js" type="text/javascript"></script>
-						<!-- <button class="contact100-form-btn" style="width: 40%; margin: auto;" onclick="alert()">
-							Register
-							<i class="fa fa-long-arrow-alt-right" id="sl" style="margin-left: 10px;"></i>
-						</button>
-						<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-						<script>
-							function alert(){
-	
-								swal({
-									title: "Authentication Required",
-									text: "You haven't logged in or you haven't filled your profile !",
-									icon: "warning",
-									button: "Do it now :)",
-									dangerMode: true,
-								})
-								.then((button) => {
-									if (button) {
-										window.location.href= "/auth/google"
-									} else {
-										swal("Your imaginary file is safe!");
-									}
-								});
-							}
-						</script> -->
-					<button class="contact100-form-btn btn2" style="width: 40%; margin: auto;" onclick="window.location.href='./pdfs/INVSTR.pdf';">
+					<!-- <button class="contact100-form-btn" style="width: 40%; margin: auto;" onclick="alert()">
+						Register
+						<i class="fa fa-long-arrow-alt-right" id="sl" style="margin-left: 10px;"></i>
+					</button>
+					<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+					<script>
+						function alert(){
+
+							swal({
+								title: "Authentication Required",
+								text: "You haven't logged in or you haven't filled your profile !",
+								icon: "warning",
+								button: "Do it now :)",
+								dangerMode: true,
+							})
+							.then((button) => {
+								if (button) {
+									window.location.href= "/auth/google"
+								} else {
+									swal("Your imaginary file is safe!");
+								}
+							});
+						}
+					</script> -->
+					<button class="contact100-form-btn btn2" style="width: 40%; margin: auto;" onclick="window.location.href='./pdfs/QUIZZAIRE.pdf';">
 						Know More
 						<i class="fa fa-long-arrow-alt-right" id="sl" style="margin-left: 10px;"></i>
 					</button>
@@ -222,50 +223,35 @@ brief idea of stocks and tend to test their knowledge on the behaviour of the ma
 				</div>
 			</div>
 			<div class="col-12 col-md-6" style="margin-top: 2.5%;">
-				<!-- <p style="color: white; font-weight: 650; font-size: 28px;">Event Description</p>
-				<p style="color:#fff;">Analog electronics constitutes of basic elements like Resistors, diodes, transistors (like
-					BJT and MOSFET) and Op-Amps with which many circuits like amplifiers, filters,
-					clippers, clampers are built. Here we will test your understanding on these Analog
-					circuits and off-course basic fundamentals. </p> -->
+				<p style="color: white; font-weight: 650; font-size: 28px;">Problem Statement</p>
+				<p style="color:#fff;">Do you have it in you what it takes to come on the top when competing against other techno-savvy people?
+                    “You boast around”, that you have in technological domain.
+                    WISSENAIRE’21 provides you the platform to re-evaluate your knowledge with exhilarating set of
+                    rounds comprising of breath-taking questionsfrom the world of Business and entrepreneurship, Technology
+                    and Science domain. Let's not make it too late to grab the only chance! prove to the other top notch quizzers,
+                    that you are the best!
+                     </p>
 				
 				<p style="color: white; font-weight: 650; font-size: 28px;"> Event Format </p>
-				<p style="color:#fff; line-height: 2;"> This is an online event conducted on an app called as “INVSTR”<br>			
-                    <i class="fa fa-check"></i>Participants have to login to the app through the email id given during the registration of
-                    this event<br>
-                    <i class="fa fa-check"></i>A league will be created by the organiser and its link will be provided to the participants via
-                    registered mail. League details will be provided along with the link.<br>
-                    <i class="fa fa-check"></i>From the bundles provided, tech junkie which consists of 9 markets, must be chosen and
-                    then click on ‘pick portfolio’. The 9 stocks get invested and the event begins. All the graphs in
-                    this portfolio are taking place in real time.<br>
-                    <i class="fa fa-check"></i> Duration of the event is 1 hour. Participant who’s profit percentage is more, wins the event. 
-                    <br>
-                    
-
+				<p style="color:#fff; line-height: 2;"> • Round 1 - First round is an online preliminary round.<br>			
+                • Round 2 - Second round is an online quiz.
 				
 				
 			</div>
 			<div class="col-12 col-md-6">
 				<br>
 				<p style="color: white; font-weight: 650; font-size: 28px;"> Rules </p>
-				<p style="color:#fff; line-height: 2;"><i class="fa fa-check"></i> Participants must participate only with the registered email id and make sure that you are
-                    present in the league.<br>
-				<i class="fa fa-check"></i> This is an individual event.
-                <br>
-				<i class="fa fa-check"></i> Participants must make sure that initially before picking the portfolio, their amount is
-                1000,000$ and profit percentage is 0.00%.<br>
-				<i class="fa fa-check"></i>  Participants are not supposed to pick bundles other than Tech Junkie<br>	
-                <i class="fa fa-check"></i> Event organisers will monitor all the investments along with their respective sectors invested
-                by the participants.<br>
-                <i class="fa fa-check"></i> Wissenaire team decision is final.<br>
-
+				<p style="color:#fff; line-height: 2;"><i class="fa fa-check"></i> Any kind of malpractice during the time of event leads to disqualification<br>
+				<i class="fa fa-check"></i> A team can be formed with a maximum of two members                <br>
+				<i class="fa fa-check"></i> Wissenaire team decision is final.<br>
 			</div>
 
 			<div class="col-12 col-md-6">
 				<p style="color: white; font-weight: 650; font-size: 28px;"> Contact</p>
-				<p style="color:#fff; line-height: 2;"><i class="fa fa-user"></i>&ensp;C Divyesh<br>
+				<p style="color:#fff; line-height: 2;"><i class="fa fa-user"></i>&ensp;A.Abhiram                    <br>
 				<i class="fa fa-award"></i>&ensp;Event Co-ordinator<br>
-				<i class="fa fa-envelope"></i>&ensp;cd11@iitbbs.ac.in<br>
-				<i class="fa fa-phone"></i>&ensp;8317652305</p>
+				<i class="fa fa-envelope"></i>&ensp;aa31@iitbbs.ac.in<br>
+				<i class="fa fa-phone"></i>&ensp; 8328654960</p>
 			</div>
 		</div>
 	
