--- a/views/acdtest.ejs
+++ b/views/acdtest.ejs
@@ -275,9 +275,10 @@
 							else {
 								new swal({
 									title: 'Error',
-									text: result,
+									text: 'err',
 									icon: 'error'
 								});
+								console.log(result)
 							}
 						}
 					});
