--- a/views/acdtest.ejs
+++ b/views/acdtest.ejs
@@ -123,7 +123,7 @@
 			are integrator circuits.</i> <br>
 			<br>
 			<form id="q1" enctype="multipart/form-data">
-				<input id="sub" type="file"  name="file">
+				<input id="sub1" type="file"  name="file">
 				<input type="hidden" name="wissid" value="<%=id%>">
 				<input type="hidden" name="question" value="1">
 				<button type="submit" class="btn btn-primary">Choose a file and Submit</button>
@@ -132,7 +132,7 @@
 				$("#q1").submit(function(e) {
 					e.preventDefault(); 
 					console.log('insert clicked');
-					var image_name = $('#sub').val();
+					var image_name = $('#sub1').val();
 					if(image_name== ''){
 						console.log('no name');
 						new swal({
@@ -143,7 +143,7 @@
 						return false;
 					}
 					else{
-						var extension = $('#sub').val().split('.').pop().toLowerCase();
+						var extension = $('#sub1').val().split('.').pop().toLowerCase();
 							if(jQuery.inArray(extension, ['pdf']) == -1){
 								new swal({
 									title : 'Wrong Extension', 
@@ -151,7 +151,7 @@
 									icon: 'error'
 								})
 								console.log('extension wrong');
-								$('#sub').val('');
+								$('#sub1').val('');
 								return false;
 							}
 						}
