--- a/views/acdtest.ejs
+++ b/views/acdtest.ejs
@@ -381,9 +381,10 @@
 							else {
 								new swal({
 									title: 'Error',
-									text: result,
+									text: 'error',
 									icon: 'error'
 								});
+								console.log(result)
 							}
 						}
 					});
@@ -488,9 +489,10 @@
 							else {
 								new swal({
 									title: 'Error',
-									text: result,
+									text: 'error',
 									icon: 'error'
 								});
+								console.log(result)
 							}
 						}
 					});
