--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -194,7 +194,7 @@
     <div class="section-title row" data-num="01" data-aos="fade-up"  style="margin-top: 100px;">
         <h3 class="h6">User Profile</h3>
     </div>
-    <% if(participant.wissid){
+    <% if(participant){
       %>
     <div class="row" style="margin-top: 100px;">
         <div class="col-12 col-md-6">
