--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -132,7 +132,7 @@
 						
 			  <h2 class="visually-hidden" id="block-butterfly-main-menu-menu">Main navigation</h2>
 			  <ul>
-				  <% if(participant.wissid) { %>
+				  <% if(participant) { %>
 				<li class="open">
 					<a href="/profile"><i class="icofont-ui-user"></i></a><br><br><a href="/profile">My Profile</a>
 				  </li>
@@ -194,7 +194,7 @@
     <div class="section-title row" data-num="01" data-aos="fade-up"  style="margin-top: 100px;">
         <h3 class="h6">User Profile</h3>
     </div>
-    <% if(participant){
+    <% if(participant.phone){
       %>
     <div class="row" style="margin-top: 100px;">
         <div class="col-12 col-md-6">
