--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -118,7 +118,7 @@
     </style>
 </head>
 <body>
-  <header style="height: 1vh !important;" class="hidden">
+  <header style="height: 1vh !important;">
 		<div id="navigation" class="">
 			<a class="menu-toggle">
 				<div class="btn-toggle">
