--- a/views/acdtest.ejs
+++ b/views/acdtest.ejs
@@ -76,13 +76,13 @@
 					})
 				}
 
-				if(hours <= 0 && minutes <= 0 && seconds <=0){
-					new swal({
-						title: 'Time is up!',
-						text: 'Thankyou for attending'
-					})
-					document.getElementById("body").innerHTML = '';					
-				}
+					if(hours == 0 && minutes == 0 && seconds == 0){
+						new swal({
+							title: 'Time is up!',
+							text: 'Thankyou for attending'
+						})
+						document.getElementById("body").innerHTML = '';					
+					}
 				}, 1000);
 
 				
