--- a/views/acdtest.ejs
+++ b/views/acdtest.ejs
@@ -76,7 +76,7 @@
 					})
 				}
 
-					if(hours == 0 && minutes == 0 && seconds == 0){
+					if(hours < 0 && minutes < 0 && seconds < 0){
 						new swal({
 							title: 'Time is up!',
 							text: 'Thankyou for attending'
