--- a/views/acdtest.ejs
+++ b/views/acdtest.ejs
@@ -123,9 +123,8 @@
 			are integrator circuits.</i> <br>
 			<br>
 			<form id="q1" enctype="multipart/form-data">
-				<input id="sub1" type="file"  name="file">
+				<input id="sub1" type="file"  name="filea">
 				<input type="hidden" name="wissid" value="<%=id%>">
-				<input type="hidden" name="question" value="1">
 				<button type="submit" class="btn btn-primary">Choose a file and Submit</button>
 			</form>
 			<script>
@@ -160,7 +159,7 @@
 
 					$.ajax({
 						type: "POST",
-						url: '/acd/submission',
+						url: '/acd/submissiona',
 						data: formData, 
 						cache: false,
 						contentType: false,
@@ -220,9 +219,8 @@
 			<br>
 			<br>
 			<form id="q2" enctype="multipart/form-data">
-				<input id="sub2" type="file"  name="file">
+				<input id="sub2" type="file"  name="fileb">
 				<input type="hidden" name="wissid" value="<%=id%>">
-				<input type="hidden" name="question" value="2">
 				<button type="submit" class="btn btn-primary">Choose a file and Submit</button>
 			</form>
 			<script>
@@ -257,7 +255,7 @@
 
 					$.ajax({
 						type: "POST",
-						url: '/acd/submission',
+						url: '/acd/submissionb',
 						data: formData, 
 						cache: false,
 						contentType: false,
@@ -326,9 +324,8 @@
 			<br>
 			<br>
 			<form id="q3" enctype="multipart/form-data">
-				<input id="sub3" type="file"  name="file">
+				<input id="sub3" type="file"  name="filec">
 				<input type="hidden" name="wissid" value="<%=id%>">
-				<input type="hidden" name="question" value="3">
 				<button type="submit" class="btn btn-primary">Choose a file and Submit</button>
 			</form>
 			<script>
@@ -363,7 +360,7 @@
 
 					$.ajax({
 						type: "POST",
-						url: '/acd/submission',
+						url: '/acd/submissionc',
 						data: formData, 
 						cache: false,
 						contentType: false,
@@ -434,9 +431,8 @@
 			<br>
 			<br>
 			<form id="q4" enctype="multipart/form-data">
-				<input id="sub4" type="file"  name="file">
+				<input id="sub4" type="file"  name="filed">
 				<input type="hidden" name="wissid" value="<%=id%>">
-				<input type="hidden" name="question" value="4">
 				<button type="submit" class="btn btn-primary">Choose a file and Submit</button>
 			</form>
 			<script>
@@ -471,7 +467,7 @@
 
 					$.ajax({
 						type: "POST",
-						url: '/acd/submission',
+						url: '/acd/submissiond',
 						data: formData, 
 						cache: false,
 						contentType: false,
